--- a/talks/keynotes.bib
+++ b/talks/keynotes.bib
@@ -64,6 +64,18 @@
   langid = {german}
 }
 
+@misc{DegrowthHistoricalOrigins2024,
+  type = {{Public lecture}},
+  title = {{Degrowth: Historical origins, the diversity of the movement and current controversies}},
+  shorttitle = {{Degrowth: Historische Urspr{\"u}nge, die Vielfalt der Bewegung und aktuelle Kontroversen}},
+  year = {2024},
+  month = feb,
+  address = {{Heinrich B{\"o}ll Foundation}},
+  url = {pdf/24-02-22_Degrowth.pdf},
+  abstract = {22.02.2024},
+  langid = {german}
+}
+
 @misc{DoesTruthLie2022,
   type = {{Public lecture}},
   title = {{Does the truth lie somewhere in between? A pluralist perspective on global inequality}},
