--- a/research/publications/publications.bib
+++ b/research/publications/publications.bib
@@ -21,6 +21,16 @@
   pages = {2540--2549}
 }
 
+@book{glassmannPoliticalEconomyItaly2024a,
+  title = {The {{Political Economy}} of {{Italy}} and the {{Center-Periphery Perspective}} on {{Europe}}},
+  editor = {Glassmann, Ulrich and {Gr{\"a}bner-Radkowitsch}, Claudius},
+  year = {2024},
+  publisher = {Metropolis},
+  address = {Marburg},
+  url = {https://www.metropolis-verlag.de/dl/OpenAccess/1560.pdf;jsessionid=1F0FC253342799BE437CBD7864490C47},
+  isbn = {978-3-7316-1560-6}
+}
+
 @article{grabner-radkowitschCompetingSustainabilityInstitutionalist2023a,
   title = {Competing for {{Sustainability}}? {{An Institutionalist Analysis}} of the {{New Development Model}} of the {{European Union}}},
   shorttitle = {Competing for {{Sustainability}}?},
@@ -33,27 +43,9 @@
   pages = {676--683},
   issn = {0021-3624, 1946-326X},
   doi = {10.1080/00213624.2023.2203637},
-  url = {https://www.tandfonline.com/doi/full/10.1080/00213624.2023.2203637},
   urldate = {2024-01-31},
   langid = {english},
   file = {/Users/graebnerc/Zotero/storage/MV33V9AK/Gräbner-Radkowitsch et al. - 2023 - Competing for Sustainability An Institutionalist .pdf}
-}
-
-@article{grabner-radkowitschDegrowthGlobalSouth2023c,
-  title = {Degrowth and the {{Global South}}: {{The}} Twin Problem of Global Dependencies},
-  shorttitle = {Degrowth and the {{Global South}}},
-  author = {{Gr{\"a}bner-Radkowitsch}, Claudius and Strunk, Birte},
-  year = {2023},
-  month = nov,
-  journal = {Ecological Economics},
-  volume = {213},
-  pages = {107946},
-  issn = {09218009},
-  doi = {10.1016/j.ecolecon.2023.107946},
-  url = {https://linkinghub.elsevier.com/retrieve/pii/S0921800923002094},
-  urldate = {2023-10-13},
-  langid = {english},
-  file = {/Users/graebnerc/Zotero/storage/IEKIZCGK/Gräbner-Radkowitsch and Strunk - 2023 - Degrowth and the Global South The twin problem of.pdf}
 }
 
 @article{grabner-radkowitschDegrowthGlobalSouth2023e,
@@ -68,10 +60,20 @@
   pages = {476--483},
   issn = {0021-3624, 1946-326X},
   doi = {10.1080/00213624.2023.2201640},
-  url = {https://www.tandfonline.com/doi/full/10.1080/00213624.2023.2201640},
   urldate = {2024-01-31},
   langid = {english},
   file = {/Users/graebnerc/Zotero/storage/NW6TIFSW/Gräbner-Radkowitsch and Strunk - 2023 - Degrowth and the Global South How Institutionalis.pdf}
+}
+
+@incollection{grabner-radkowitschDevelopmentModelsEU2024,
+  title = {Development Models in the {{EU}}: Opportunities and Challenges},
+  booktitle = {The {{Political Economy}} of {{Italy}} and the {{Center-Periphery Perspective}} on {{Europe}}},
+  author = {{Gr{\"a}bner-Radkowitsch}, Claudius and Kapeller, Jakob},
+  editor = {Glassmann, Ulrich and {Gr{\"a}bner-Radkowitsch}, Claudius},
+  year = {2024},
+  pages = {49--79},
+  publisher = {Metropolis},
+  address = {Marburg}
 }
 
 @incollection{grabner-radkowitschElementsEvolutionaryApproach2022,
@@ -81,8 +83,8 @@
   editor = {Dallago, Bruno and Casagrande, Sara},
   year = {2022},
   pages = {81--102},
-  publisher = {{Routledge}},
-  address = {{London and New York}},
+  publisher = {Routledge},
+  address = {London and New York},
   doi = {10.4324/9781003144366-6},
   file = {/Users/graebnerc/Zotero/storage/FC4M4QVL/Gräbner-Radkowitsch - 2022 - Elements of an evolutionary approach to comparativ.pdf}
 }
@@ -96,7 +98,7 @@
   pages = {262--289},
   issn = {0954-349X},
   doi = {10.1016/j.strueco.2022.05.004},
-  abstract = {This paper analyzes the emergence of internal debtor-creditor relationships within a monetary union. We develop a stock-flow consistent model consisting of three regions {\textendash} North, South, and the Rest of the World (RoW) {\textendash}, where North and South form a monetary union. We show how the simultaneous presence of investment booms, declining export performance and mercantilist policies within a monetary union can interact in order to create Minsky-type boom-bust cycles. Fiscal policy and a Eurozone lender of last resort can help sustain economic life under existing structural imbalances, but without eliminating the root causes of boom-bust patterns.},
+  abstract = {This paper analyzes the emergence of internal debtor-creditor relationships within a monetary union. We develop a stock-flow consistent model consisting of three regions -- North, South, and the Rest of the World (RoW) --, where North and South form a monetary union. We show how the simultaneous presence of investment booms, declining export performance and mercantilist policies within a monetary union can interact in order to create Minsky-type boom-bust cycles. Fiscal policy and a Eurozone lender of last resort can help sustain economic life under existing structural imbalances, but without eliminating the root causes of boom-bust patterns.},
   file = {/Users/graebnerc/Zotero/storage/2FTJUWVK/Gräbner-Radkowitsch et al. - 2022 - The evolution of debtor-creditor relationships wit.pdf}
 }
 
@@ -120,13 +122,13 @@
   editor = {{Heinrich B{\"o}ll Foundation} and {ZOE-Institute for Future-Fit Economies} and {Finanzwende Recherche}},
   year = {2022},
   pages = {104--114},
-  publisher = {{Heinrich B{\"o}ll Foundation}},
-  address = {{Berlin}},
+  publisher = {Heinrich B{\"o}ll Foundation},
+  address = {Berlin},
   url = {https://eu.boell.org/en/fostering-socio-economic-convergence}
 }
 
 @article{grabnerAgentbasedComputationalModels2016,
-  title = {Agent-Based Computational Models{\textendash} a Formal Heuristic for Institutionalist Pattern Modelling?},
+  title = {Agent-Based Computational Models-- a Formal Heuristic for Institutionalist Pattern Modelling?},
   author = {Gr{\"a}bner, Claudius},
   year = {2016},
   month = jan,
@@ -134,8 +136,7 @@
   volume = {12},
   number = {1},
   pages = {241--261},
-  doi = {10.1017/s1744137415000193},
-  url = {http://www.journals.cambridge.org/abstract\_S1744137415000193}
+  doi = {10.1017/s1744137415000193}
 }
 
 @article{grabnerCapabilityAccumulationProduct2022,
@@ -159,8 +160,7 @@
   volume = {51},
   number = {2},
   pages = {392--400},
-  doi = {10.1080/00213624.2017.1320915},
-  url = {https://www.tandfonline.com/doi/full/10.1080/00213624.2017.1320915}
+  doi = {10.1080/00213624.2017.1320915}
 }
 
 @article{grabnerComplexityEconomiesPluralism2017,
@@ -172,8 +172,7 @@
   volume = {137},
   number = {3},
   pages = {193--225},
-  doi = {10.3790/jce.137.3.193},
-  url = {https://ejournals.duncker-humblot.de/doi/10.3790/jce.137.3.193}
+  doi = {10.3790/jce.137.3.193}
 }
 
 @incollection{grabnerDealingAdequatelyPolitical2017,
@@ -183,8 +182,8 @@
   editor = {Hanappi, Hardy and Katsikides, Savas and {Scholz-W{\"a}ckerle}, Manuel},
   year = {2017},
   pages = {236--254},
-  publisher = {{Routledge}},
-  address = {{London and New York}}
+  publisher = {Routledge},
+  address = {London and New York}
 }
 
 @article{grabnerDynamicsNetworksIntroduction2018,
@@ -208,12 +207,11 @@
   number = {3},
   pages = {647--669},
   doi = {10.1093/cje/bez059},
-  url = {https://academic.oup.com/cje/advance-article/doi/10.1093/cje/bez059/5706035},
   file = {/Users/graebnerc/Zotero/storage/6SPUWBVA/Gräbner et al. - 2020 - Is the Eurozone disintegrating Macroeconomic dive.pdf}
 }
 
 @article{grabnerFormalApproachesSocioeconomic2018,
-  title = {Formal {{Approaches}} to {{Socio-economic Analysis}}{\textemdash}{{Past}} and {{Perspectives}}},
+  title = {Formal {{Approaches}} to {{Socio-economic Analysis}}---{{Past}} and {{Perspectives}}},
   author = {Gr{\"a}bner, Claudius},
   year = {2018},
   month = jan,
@@ -221,8 +219,7 @@
   volume = {47},
   number = {1},
   pages = {32--63},
-  doi = {10.1080/07360932.2015.1042491},
-  url = {http://www.tandfonline.com/doi/full/10.1080/07360932.2015.1042491}
+  doi = {10.1080/07360932.2015.1042491}
 }
 
 @article{grabnerGettingBestBoth2019,
@@ -234,8 +231,7 @@
   volume = {53},
   number = {2},
   pages = {763--782},
-  doi = {10.1007/s10614-017-9763-8},
-  url = {http://link.springer.com/10.1007/s10614-017-9763-8}
+  doi = {10.1007/s10614-017-9763-8}
 }
 
 @article{grabnerHowRelateModels2018,
@@ -247,7 +243,6 @@
   volume = {21},
   number = {3},
   doi = {10.18564/jasss.3772},
-  url = {http://jasss.soc.surrey.ac.uk/21/3/8.html},
   abstract = {by Claudius Graebner},
   file = {/Users/graebnerc/Zotero/storage/2JMPVET8/Gräbner - 2018 - How to Relate Models to Reality An Epistemologica.pdf}
 }
@@ -270,8 +265,8 @@
   month = jan,
   series = {The {{Routledge Handbook}} of {{Heterodox Economics}}},
   pages = {145--159},
-  publisher = {{Routledge}},
-  address = {{London, UK, New York, NY}},
+  publisher = {Routledge},
+  address = {London, UK, New York, NY},
   file = {/Users/graebnerc/Zotero/storage/NVT9UYEN/Gräbner and Kapeller - 2017 - The Micro-Macro Link in Heterodox Economics.pdf}
 }
 
@@ -284,8 +279,7 @@
   volume = {49},
   number = {2},
   pages = {433--440},
-  doi = {10.1080/00213624.2015.1042765},
-  url = {http://www.tandfonline.com/doi/full/10.1080/00213624.2015.1042765}
+  doi = {10.1080/00213624.2015.1042765}
 }
 
 @article{grabnerOnlineplattformenUndMittelalterlichen2017,
@@ -298,7 +292,6 @@
   number = {3},
   pages = {23--29},
   doi = {10.14512/tatup.26.3.23},
-  url = {http://tatup.de/index.php/tatup/article/view/62/112},
   abstract = {Mit der zunehmenden Digitalisierung und Vernetzung {\"o}konomischer Systeme haben plattformbasierte Interaktionsbeziehungen stark an Bedeutung gewonnen. Hier werden zwei oder mehr Nutzungsgruppen durch eine dritte Seite, die Plattform, zusammengebracht. Die Interaktion wird in solchen zweiseitigen M{\"a}rkten von den Plattformbetreibern kontrolliert. Kreditkartensysteme, Softwarem{\"a}rkte oder werbefinanzierte Online-Communities stellen typische Beispiele dar. Da die Analyse von zweiseitigen M{\"a}rkten mit Gleichgewichtsmodellen aufgrund der algebraischen Struktur des Problems in der Regel nicht praktikabel ist, pr{\"a}sentieren wir im vorliegenden Beitrag ein agentenbasiertes Modell, welches in einem k{\"u}rzlich erschienenen Artikel ausf{\"u}hrlicher diskutiert wird. Anhand von illustrativen Beispielen verdeutlichen wir die Implikationen eines agentenbasierten Ansatzes f{\"u}r die Innovations{\"o}konomik im Allgemeinen und das Studium von Technologieentwicklung im Besonderen.}
 }
 
@@ -333,8 +326,8 @@
   title = {Policy {{Implications}} of {{Recent Advances}} in {{Evolutionary}} and {{Institutional Economics}}},
   editor = {Gr{\"a}bner, Claudius and Heinrich, Torsten and Schwardt, Henning},
   year = {2016},
-  publisher = {{Routledge}},
-  address = {{New York}}
+  publisher = {Routledge},
+  address = {New York}
 }
 
 @incollection{grabnerRolleGleichgewichtskonzeptsMikrookonomischen2017,
@@ -345,8 +338,8 @@
   year = {2017},
   month = jan,
   pages = {60--73},
-  publisher = {{iRights media}},
-  address = {{Berlin}},
+  publisher = {iRights media},
+  address = {Berlin},
   url = {http://fgw-nrw.de/fileadmin/user\_upload/WND\_iRightsMedia\_2Aufl\_final-web.pdf}
 }
 
@@ -359,7 +352,6 @@
   number = {5},
   pages = {1467--1495},
   doi = {10.1007/s00191-019-00639-6},
-  url = {http://link.springer.com/10.1007/s00191-019-00639-6},
   abstract = {This paper analyzes the dynamics of structural polarization and macroeconomic divergence in the context of European integration, where the latter is primarily understood as an increase in economic...},
   file = {/Users/graebnerc/Zotero/storage/MQSTNLKW/Gräbner et al. - 2020 - Structural change in times of increasing openness.pdf}
 }
@@ -373,8 +365,7 @@
   volume = {52},
   number = {2},
   pages = {559--569},
-  doi = {10.1080/00213624.2018.1469936},
-  url = {https://www.tandfonline.com/doi/full/10.1080/00213624.2018.1469936}
+  doi = {10.1080/00213624.2018.1469936}
 }
 
 @article{grabnerTrustSocialControl2020,
@@ -411,8 +402,7 @@
   volume = {9},
   number = {3},
   pages = {153--180},
-  doi = {10.1504/ijcee.2019.100558},
-  url = {http://www.inderscience.com/link.php?id=100558}
+  doi = {10.1504/ijcee.2019.100558}
 }
 
 @article{kapellerEconomicPolarisationEurope2019,
@@ -433,8 +423,8 @@
   editor = {Fischer, Karin and Reiner, Christian and Staritz, Cornelia},
   year = {2021},
   pages = {195--213},
-  publisher = {{mandelbaum verlag}},
-  address = {{Wien}}
+  publisher = {mandelbaum verlag},
+  address = {Wien}
 }
 
 @article{kapellerStandortwettbewerbUndDeindustrialisierung2021,
@@ -451,8 +441,8 @@
   title = {Wirtschaftliche {{Polarisierung}} in {{Europa}}},
   author = {Kapeller, Jakob and Gr{\"a}bner, Claudius and Heimberger, Philipp},
   year = {2019},
-  publisher = {{Friedrich-Ebert-Stiftung}},
-  address = {{Berlin}},
+  publisher = {Friedrich-Ebert-Stiftung},
+  address = {Berlin},
   url = {https://www.fes.de/wirtschaftliche-polarisierung-in-europa}
 }
 
@@ -465,8 +455,7 @@
   volume = {20},
   number = {4},
   pages = {817--819},
-  doi = {10.1111/rode.12285},
-  url = {http://doi.wiley.com/10.1111/rode.12285}
+  doi = {10.1111/rode.12285}
 }
 
 @incollection{schwardtEconomicComplexityTradeOffs2016,
@@ -477,6 +466,6 @@
   year = {2016},
   month = jan,
   pages = {3--19},
-  publisher = {{Routledge}},
-  address = {{London and New York}}
+  publisher = {Routledge},
+  address = {London and New York}
 }
