--- a/research/publications/nonacademic.bib
+++ b/research/publications/nonacademic.bib
@@ -1,4 +1,22 @@
-@misc{grabner-radkowitschDegrowthGlobalSouth2023f,
+@misc{altreiter20JahreGute2021,
+  title = {20 {{Jahre}} Gute {{Absichten}} in Der {{Wissenschaftspolitik}}},
+  author = {Altreiter, Carina and Rogojanu, Ana and Gr{\"a}bner, Claudius and P{\"u}hringer, Stephan and Wolfmayr, Georg},
+  year = {2021},
+  month = aug,
+  journal = {Die Presse},
+  url = {https://www.diepresse.com/6024122/20-jahre-gute-absichten-in-der-wissenschaftspolitik}
+}
+
+@misc{altreiterBefristeteUniStellenDrei2021,
+  title = {Befristete {{Uni-Stellen}}: {{Drei Fehlschl{\"u}sse}} Mit Gravierenden {{Folgen}}},
+  author = {Altreiter, Carina and Rogojanu, Ana and Gr{\"a}bner, Claudius and P{\"u}hringer, Stephan and Wolfmayr, Georg},
+  year = {2021},
+  month = jul,
+  journal = {Der Standard},
+  url = {https://www.derstandard.at/story/2000128392310/befristete-uni-stellen-drei-fehlschluesse-mit-gravierenden-folgen}
+}
+
+@misc{grabner-radkowitschDegrowthGlobalSouth2023d,
   title = {Degrowth and the {{Global South}}: Remarks on the Twin Problem of Structural Interdependencies},
   author = {{Gr{\"a}bner-Radkowitsch}, Claudius and Strunk, Birte},
   year = {2023},
@@ -17,12 +35,21 @@
 }
 
 @misc{grabner-radkowitschPluralismEconomicsIts2021a,
-  title = {Pluralism in Economics {\textendash} Its Critiques and Their Lessons},
+  title = {Pluralism in Economics -- Its Critiques and Their Lessons},
   author = {{Gr{\"a}bner-Radkowitsch}, Claudius and Strunk, Birte},
   year = {2021},
   month = mar,
   journal = {Developing Economics},
   url = {https://developingeconomics.org/2021/02/03/pluralism-in-economics-its-critiques-and-their-lessons/}
+}
+
+@misc{grabner-radkowitschQuellePlacePour2024,
+  title = {Quelle Place Pour Le {{Sud}} Global Dans La D{\'e}croissance?},
+  author = {{Gr{\"a}bner-Radkowitsch}, Claudius and Strunk, Birte},
+  year = {2024},
+  month = jul,
+  journal = {The Conversation},
+  url = {https://theconversation.com/quelle-place-pour-le-sud-global-dans-la-decroissance-225209}
 }
 
 @misc{grabner-radkowitschWhatAreReasons2021,
@@ -39,12 +66,12 @@
   author = {{Gr{\"a}bner-Radkowitsch}, Claudius and Lage, Jonas and Wiese, Frauke},
   year = {2022},
   month = jun,
-  journal = {Makronom {\textendash} Online Magazin f{\"u}r Wirtschaftspolitik},
+  journal = {Makronom -- Online Magazin f{\"u}r Wirtschaftspolitik},
   url = {https://makronom.de/zur-oekonomischen-bedeutung-von-suffizienz-42099}
 }
 
 @misc{grabnerKritikPluralenOkonomik2020,
-  title = {Kritik an Der {{Pluralen {\"O}konomik}} {\textendash} {{Was}} Ist Dran Und Warum Ist Das Wichtig?},
+  title = {Kritik an Der {{Pluralen {\"O}konomik}} -- {{Was}} Ist Dran Und Warum Ist Das Wichtig?},
   author = {Gr{\"a}bner, Claudius and Strunk, Birte},
   year = {2020},
   month = nov,
@@ -66,7 +93,7 @@
   author = {Gr{\"a}bner, Claudius and Heimberger, Philipp and Kapeller, Jakob and Sch{\"u}tz, Bernhard},
   year = {2019},
   month = sep,
-  journal = {Makronom {\textendash} Online Magazin f{\"u}r Wirtschaftspolitik},
+  journal = {Makronom -- Online Magazin f{\"u}r Wirtschaftspolitik},
   url = {https://makronom.de/eine-strategie-gegen-die-oekonomische-polarisierung-europas-32115}
 }
 
@@ -84,7 +111,7 @@
   author = {Heimberger, Philipp and Gr{\"a}bner, Claudius and Kapeller, Jakob and Sch{\"u}tz, Bernhard},
   year = {2018},
   month = mar,
-  journal = {Makronom {\textendash} Online Magazin f{\"u}r Wirtschaftspolitik},
+  journal = {Makronom -- Online Magazin f{\"u}r Wirtschaftspolitik},
   url = {https://makronom.de/polarisierung-konvergenz-warum-europa-trotz-aufschwung-oekonomisch-weiter-auseinander-driftet-25782}
 }
 
@@ -93,6 +120,6 @@
   author = {Heimberger, Philipp and Gr{\"a}bner, Claudius and Kapeller, Jakob and Sch{\"u}tz, Bernhard},
   year = {2020},
   month = jan,
-  journal = {Makronom {\textendash} Online Magazin f{\"u}r Wirtschaftspolitik},
+  journal = {Makronom -- Online Magazin f{\"u}r Wirtschaftspolitik},
   url = {https://makronom.de/oekonomische-offenheit-die-vermessung-der-globalisierung-37176}
 }
