--- a/talks/keynotes.bib
+++ b/talks/keynotes.bib
@@ -4,7 +4,7 @@
   shorttitle = {{Agentenbasiertes Modellieren und Komplexit{\"a}ts{\"o}konomik}},
   year = {2023},
   month = jan,
-  address = {{University of Siegen}},
+  address = {University of Siegen},
   url = {pdf/23-01-26_ComplexityABM.pdf},
   abstract = {23.01.2023},
   langid = {german}
@@ -15,7 +15,7 @@
   title = {Applied {{Economic Methodology}}},
   year = {2022},
   month = sep,
-  address = {{University of Vienna}},
+  address = {University of Vienna},
   url = {pdf/22-09-29_AppliedMethodology.pdf},
   abstract = {29.09.202},
   langid = {english}
@@ -26,7 +26,7 @@
   title = {Automation and Inequalities: {{The}} Merits of a Pluralist Research Program in the Context of Automation},
   year = {2022},
   month = jun,
-  address = {{Parthenope University of Naples}},
+  address = {Parthenope University of Naples},
   abstract = {06.09.2022},
   langid = {english}
 }
@@ -37,7 +37,7 @@
   shorttitle = {{Herausforderungen einer pluralen {\"O}konomik}},
   year = {2021},
   month = may,
-  address = {{Spring school of the German Network for Pluralism in Economics}},
+  address = {Spring school of the German Network for Pluralism in Economics},
   abstract = {29.05.2021},
   langid = {german}
 }
@@ -48,7 +48,7 @@
   shorttitle = {{Komplexit{\"a}ts{\"o}konomik - Ein Gegenentwurf zur neoklassischen Gleichgewichts{\"o}konomik?}},
   year = {2021},
   month = nov,
-  address = {{Zeppelin University}},
+  address = {Zeppelin University},
   abstract = {17.11.2021},
   langid = {german}
 }
@@ -59,7 +59,7 @@
   shorttitle = {{Komplexit{\"a}ts{\"o}konomik - Eine kurze Einf{\"u}hrung}},
   year = {2021},
   month = mar,
-  address = {{FU Berlin}},
+  address = {FU Berlin},
   abstract = {03.12.2021},
   langid = {german}
 }
@@ -70,7 +70,7 @@
   shorttitle = {{Degrowth: Historische Urspr{\"u}nge, die Vielfalt der Bewegung und aktuelle Kontroversen}},
   year = {2024},
   month = feb,
-  address = {{Heinrich B{\"o}ll Foundation}},
+  address = {Heinrich B{\"o}ll Foundation},
   url = {pdf/24-02-22_Degrowth.pdf},
   abstract = {22.02.2024},
   langid = {german}
@@ -82,7 +82,7 @@
   shorttitle = {{Liegt die Wahrheit irgendwo dazwischen? Eine plurale Perspektive auf globale Ungleichheit}},
   year = {2022},
   month = feb,
-  address = {{University of T{\"u}bingen}},
+  address = {University of T{\"u}bingen},
   abstract = {02.05.2022},
   langid = {german}
 }
@@ -94,7 +94,7 @@
   author = {{Gr{\"a}bner-Radkowitsch}, Claudius},
   year = {2024},
   month = jan,
-  address = {{University of Siegen}},
+  address = {University of Siegen},
   url = {pdf/24-01-19_ComplexityPluralism.pdf},
   abstract = {24.01.2024},
   langid = {german}
@@ -106,7 +106,7 @@
   shorttitle = {{Pluralismus und Komplexit{\"a}t: Ein Gegenentwurf zur neoklassischen Gleichgewichts{\"o}konomik?}},
   year = {2024},
   month = jan,
-  address = {{University of Hamburg}},
+  address = {University of Hamburg},
   url = {pdf/24-01-24_ComplexityABM.pdf},
   abstract = {19.01.2024},
   langid = {german}
@@ -117,7 +117,7 @@
   title = {Pluralism, Complexity and the Effective Triangulation of Methods},
   year = {2019},
   month = feb,
-  address = {{NEEC Summer Schoool on Complexity Economics, Behavioral Economics and Data Science at the University of Bochum}},
+  address = {NEEC Summer Schoool on Complexity Economics, Behavioral Economics and Data Science at the University of Bochum},
   abstract = {02.09.2019},
   langid = {english}
 }
@@ -127,7 +127,7 @@
   title = {Pluralism in Economics \& beyond - {{How}} a Plurality of Paradigms Helps Understanding Socio-Ecological Challenges},
   year = {2021},
   month = dec,
-  address = {{Europa-University Flensburg}},
+  address = {Europa-University Flensburg},
   abstract = {16.12.2021},
   langid = {english}
 }
@@ -137,7 +137,7 @@
   title = {The {{Political Economy}} of {{Economic Complexity}}: {{Models}}, {{Data}} and {{Policy}}},
   year = {2019},
   month = dec,
-  address = {{Warsaw University of Economics}},
+  address = {Warsaw University of Economics},
   url = {2019EAEPE-Complexity.qmd},
   abstract = {11.-12.09.2019},
   langid = {english}
@@ -149,7 +149,7 @@
   shorttitle = {{Die sozio{\"o}konomischen Dimension von Suffizienz: M{\"o}gliche Beitr{\"a}ge der Pluralen {\"O}konomik}},
   year = {2022},
   month = dec,
-  address = {{Europa-University Flensburg}},
+  address = {Europa-University Flensburg},
   url = {pdf/22-12-19_Suffizienz.pdf},
   abstract = {19.12.2022},
   langid = {german}
@@ -161,7 +161,7 @@
   shorttitle = {{Was ist Plurale {\"O}konomik?}},
   year = {2021},
   month = oct,
-  address = {{Christian-Albrechts-University}},
+  address = {Christian-Albrechts-University},
   abstract = {19.10.2021},
   langid = {german},
   annotation = {Available on Youtube}
@@ -173,7 +173,7 @@
   shorttitle = {{Warum braucht es Plurale {\"O}konomik?}},
   year = {2021},
   month = sep,
-  address = {{University of Vienna}},
+  address = {University of Vienna},
   abstract = {09.06.2021 (together with Birte Strunk)},
   langid = {german}
 }
