--- a/research/publications/publications.bib
+++ b/research/publications/publications.bib
@@ -6,8 +6,39 @@
   volume = {50},
   number = {6},
   pages = {104258},
-  doi = {10.1016/j.respol.2021.104258},
-  keywords = {2) ABM,2) Economic Complexity,2) Macroeconomics,2) Technological change}
+  doi = {10.1016/j.respol.2021.104258}
+}
+
+@article{cordesCollapseCooperationEndogeneity2021,
+  title = {The Collapse of Cooperation: The Endogeneity of Institutional Break-up and Its Asymmetry with Emergence},
+  shorttitle = {The Collapse of Cooperation},
+  author = {Cordes, Christian and Elsner, Wolfram and Graebner, Claudius and Heinrich, Torsten and Henkel, Joshua and Schwardt, Henning and Schwesinger, Georg and Su, Tong-Yaa},
+  year = {2021},
+  month = sep,
+  journal = {Journal of Evolutionary Economics},
+  volume = {31},
+  number = {4},
+  pages = {1291--1315},
+  issn = {0936-9937, 1432-1386},
+  doi = {10.1007/s00191-021-00739-2},
+  urldate = {2024-06-25},
+  abstract = {Abstract             Decline and break-up of institutionalized cooperation, at all levels, has occurred frequently. Some of its concomitants, such as international migration, have become topical in the globalized world. Aspects of the phenomenon have also become known as failing states. However, the focus in most social sciences has been on institutional emergence and persistence, not collapse. We develop an endogenous explanation of collapsing institutions. Collapse may be an implication of the very economic success of institutionalized cooperation and of increasing system complexity, when cognitive conditions for effective collective decision-making do not proportionately evolve. Moreover, we show that collapse is not a simple logical reverse of emergence. Rather, institutions break up at different factor constellations than the ones prevailing at emergence. We approach endogenous institutional break-up and its asymmetry from various paradigmatic and disciplinary perspectives, employing psychology, anthropology, network analysis, and institutional economics. These perspectives cover individuals, groups, interaction-arenas, populations, and social networks.},
+  langid = {english}
+}
+
+@article{Degrowth23,
+  title = {Degrowth and the {{Global South}}: {{The}} Twin Problem of Global Dependencies},
+  shorttitle = {Degrowth and the {{Global South}}},
+  author = {{Gr{\"a}bner-Radkowitsch}, Claudius and Strunk, Birte},
+  year = {2023},
+  month = nov,
+  journal = {Ecological Economics},
+  volume = {213},
+  pages = {107946},
+  issn = {09218009},
+  doi = {10.1016/j.ecolecon.2023.107946},
+  urldate = {2023-08-25},
+  langid = {english}
 }
 
 @article{flechtnerHeterogeneousRelationshipIncome2019,
@@ -21,7 +52,7 @@
   pages = {2540--2549}
 }
 
-@book{glassmannPoliticalEconomyItaly2024a,
+@book{glassmannPoliticalEconomyItaly2024,
   title = {The {{Political Economy}} of {{Italy}} and the {{Center-Periphery Perspective}} on {{Europe}}},
   editor = {Glassmann, Ulrich and {Gr{\"a}bner-Radkowitsch}, Claudius},
   year = {2024},
@@ -31,7 +62,7 @@
   isbn = {978-3-7316-1560-6}
 }
 
-@article{grabner-radkowitschCompetingSustainabilityInstitutionalist2023a,
+@article{grabner-radkowitschCompetingSustainabilityInstitutionalist2023,
   title = {Competing for {{Sustainability}}? {{An Institutionalist Analysis}} of the {{New Development Model}} of the {{European Union}}},
   shorttitle = {Competing for {{Sustainability}}?},
   author = {{Gr{\"a}bner-Radkowitsch}, Claudius and Hager, Theresa and Hornykewycz, Anna},
@@ -44,11 +75,10 @@
   issn = {0021-3624, 1946-326X},
   doi = {10.1080/00213624.2023.2203637},
   urldate = {2024-01-31},
-  langid = {english},
-  file = {/Users/graebnerc/Zotero/storage/MV33V9AK/Gräbner-Radkowitsch et al. - 2023 - Competing for Sustainability An Institutionalist .pdf}
+  langid = {english}
 }
 
-@article{grabner-radkowitschDegrowthGlobalSouth2023e,
+@article{grabner-radkowitschDegrowthGlobalSouth2023,
   title = {Degrowth and the {{Global South}}? {{How Institutionalism}} Can {{Complement}} a {{Timely Discourse}} on {{Ecologically Sustainable Development}} in an {{Unequal World}}},
   shorttitle = {Degrowth and the {{Global South}}?},
   author = {{Gr{\"a}bner-Radkowitsch}, Claudius and Strunk, Birte},
@@ -61,8 +91,7 @@
   issn = {0021-3624, 1946-326X},
   doi = {10.1080/00213624.2023.2201640},
   urldate = {2024-01-31},
-  langid = {english},
-  file = {/Users/graebnerc/Zotero/storage/NW6TIFSW/Gräbner-Radkowitsch and Strunk - 2023 - Degrowth and the Global South How Institutionalis.pdf}
+  langid = {english}
 }
 
 @incollection{grabner-radkowitschDevelopmentModelsEU2024,
@@ -85,8 +114,7 @@
   pages = {81--102},
   publisher = {Routledge},
   address = {London and New York},
-  doi = {10.4324/9781003144366-6},
-  file = {/Users/graebnerc/Zotero/storage/FC4M4QVL/Gräbner-Radkowitsch - 2022 - Elements of an evolutionary approach to comparativ.pdf}
+  doi = {10.4324/9781003144366-6}
 }
 
 @article{grabner-radkowitschEvolutionDebtorcreditorRelationships2022,
@@ -98,8 +126,7 @@
   pages = {262--289},
   issn = {0954-349X},
   doi = {10.1016/j.strueco.2022.05.004},
-  abstract = {This paper analyzes the emergence of internal debtor-creditor relationships within a monetary union. We develop a stock-flow consistent model consisting of three regions -- North, South, and the Rest of the World (RoW) --, where North and South form a monetary union. We show how the simultaneous presence of investment booms, declining export performance and mercantilist policies within a monetary union can interact in order to create Minsky-type boom-bust cycles. Fiscal policy and a Eurozone lender of last resort can help sustain economic life under existing structural imbalances, but without eliminating the root causes of boom-bust patterns.},
-  file = {/Users/graebnerc/Zotero/storage/2FTJUWVK/Gräbner-Radkowitsch et al. - 2022 - The evolution of debtor-creditor relationships wit.pdf}
+  abstract = {This paper analyzes the emergence of internal debtor-creditor relationships within a monetary union. We develop a stock-flow consistent model consisting of three regions -- North, South, and the Rest of the World (RoW) --, where North and South form a monetary union. We show how the simultaneous presence of investment booms, declining export performance and mercantilist policies within a monetary union can interact in order to create Minsky-type boom-bust cycles. Fiscal policy and a Eurozone lender of last resort can help sustain economic life under existing structural imbalances, but without eliminating the root causes of boom-bust patterns.}
 }
 
 @article{grabner-radkowitschTradeModelsEuropean2022,
@@ -147,8 +174,7 @@
   volume = {32},
   number = {1},
   pages = {87--121},
-  doi = {10.1007/s00191-021-00732-9},
-  keywords = {2) ABM,2) Technological change}
+  doi = {10.1007/s00191-021-00732-9}
 }
 
 @article{grabnerComplementaryRelationshipInstitutional2017,
@@ -206,8 +232,7 @@
   volume = {44},
   number = {3},
   pages = {647--669},
-  doi = {10.1093/cje/bez059},
-  file = {/Users/graebnerc/Zotero/storage/6SPUWBVA/Gräbner et al. - 2020 - Is the Eurozone disintegrating Macroeconomic dive.pdf}
+  doi = {10.1093/cje/bez059}
 }
 
 @article{grabnerFormalApproachesSocioeconomic2018,
@@ -244,7 +269,7 @@
   number = {3},
   doi = {10.18564/jasss.3772},
   abstract = {by Claudius Graebner},
-  file = {/Users/graebnerc/Zotero/storage/2JMPVET8/Gräbner - 2018 - How to Relate Models to Reality An Epistemologica.pdf}
+  note = {by Claudius Graebner}
 }
 
 @article{grabnerMeasuringEconomicOpenness2018,
@@ -266,8 +291,7 @@
   series = {The {{Routledge Handbook}} of {{Heterodox Economics}}},
   pages = {145--159},
   publisher = {Routledge},
-  address = {London, UK, New York, NY},
-  file = {/Users/graebnerc/Zotero/storage/NVT9UYEN/Gräbner and Kapeller - 2017 - The Micro-Macro Link in Heterodox Economics.pdf}
+  address = {London, UK, New York, NY}
 }
 
 @article{grabnerNewPerspectivesInstitutionalist2015,
@@ -292,7 +316,8 @@
   number = {3},
   pages = {23--29},
   doi = {10.14512/tatup.26.3.23},
-  abstract = {Mit der zunehmenden Digitalisierung und Vernetzung {\"o}konomischer Systeme haben plattformbasierte Interaktionsbeziehungen stark an Bedeutung gewonnen. Hier werden zwei oder mehr Nutzungsgruppen durch eine dritte Seite, die Plattform, zusammengebracht. Die Interaktion wird in solchen zweiseitigen M{\"a}rkten von den Plattformbetreibern kontrolliert. Kreditkartensysteme, Softwarem{\"a}rkte oder werbefinanzierte Online-Communities stellen typische Beispiele dar. Da die Analyse von zweiseitigen M{\"a}rkten mit Gleichgewichtsmodellen aufgrund der algebraischen Struktur des Problems in der Regel nicht praktikabel ist, pr{\"a}sentieren wir im vorliegenden Beitrag ein agentenbasiertes Modell, welches in einem k{\"u}rzlich erschienenen Artikel ausf{\"u}hrlicher diskutiert wird. Anhand von illustrativen Beispielen verdeutlichen wir die Implikationen eines agentenbasierten Ansatzes f{\"u}r die Innovations{\"o}konomik im Allgemeinen und das Studium von Technologieentwicklung im Besonderen.}
+  abstract = {Mit der zunehmenden Digitalisierung und Vernetzung {\"o}konomischer Systeme haben plattformbasierte Interaktionsbeziehungen stark an Bedeutung gewonnen. Hier werden zwei oder mehr Nutzungsgruppen durch eine dritte Seite, die Plattform, zusammengebracht. Die Interaktion wird in solchen zweiseitigen M{\"a}rkten von den Plattformbetreibern kontrolliert. Kreditkartensysteme, Softwarem{\"a}rkte oder werbefinanzierte Online-Communities stellen typische Beispiele dar. Da die Analyse von zweiseitigen M{\"a}rkten mit Gleichgewichtsmodellen aufgrund der algebraischen Struktur des Problems in der Regel nicht praktikabel ist, pr{\"a}sentieren wir im vorliegenden Beitrag ein agentenbasiertes Modell, welches in einem k{\"u}rzlich erschienenen Artikel ausf{\"u}hrlicher diskutiert wird. Anhand von illustrativen Beispielen verdeutlichen wir die Implikationen eines agentenbasierten Ansatzes f{\"u}r die Innovations{\"o}konomik im Allgemeinen und das Studium von Technologieentwicklung im Besonderen.},
+  note = {Mit der zunehmenden Digitalisierung und Vernetzung {\"o}konomischer Systeme haben plattformbasierte Interaktionsbeziehungen stark an Bedeutung gewonnen. Hier werden zwei oder mehr Nutzungsgruppen durch eine dritte Seite, die Plattform, zusammengebracht. Die Interaktion wird in solchen zweiseitigen M{\"a}rkten von den Plattformbetreibern kontrolliert. Kreditkartensysteme, Softwarem{\"a}rkte oder werbefinanzierte Online-Communities stellen typische Beispiele dar. Da die Analyse von zweiseitigen M{\"a}rkten mit Gleichgewichtsmodellen aufgrund der algebraischen Struktur des Problems in der Regel nicht praktikabel ist, pr{\"a}sentieren wir im vorliegenden Beitrag ein agentenbasiertes Modell, welches in einem k{\"u}rzlich erschienenen Artikel ausf{\"u}hrlicher diskutiert wird. Anhand von illustrativen Beispielen verdeutlichen wir die Implikationen eines agentenbasierten Ansatzes f{\"u}r die Innovations{\"o}konomik im Allgemeinen und das Studium von Technologieentwicklung im Besonderen.}
 }
 
 @article{grabnerPandemicPushesPolarisation2020,
@@ -304,9 +329,7 @@
   number = {3},
   pages = {425--438},
   doi = {10.1007/s40812-020-00163-w},
-  abstract = {This paper discusses the uneven consequences of the macroeconomic fallout from the Coronavirus and related economic policy responses against the background of an analysis of longer-term macroeconomic divergence in the Eurozone. We show that the macroeconomic impact of the Corona crisis is estimated to be more severe in Southern Eurozone countries than in Northern Eurozone countries, which further reinforces the tendency of an increasing economic polarisation. This polarisation process can be traced back to existing differences in production structures and uneven vulnerabilities of the underlying growth models. As a consequence, any policy response to the Corona crisis that does not take the deeper problems of structural polarisation into account will suffer from limited impact in the medium to long run.},
-  keywords = {2) EU,2) Macroeconomics,6) Inequality},
-  file = {/Users/graebnerc/Zotero/storage/Z9IS5ATZ/Gräbner et al. - 2020 - Pandemic pushes polarisation the Corona crisis an.pdf}
+  abstract = {This paper discusses the uneven consequences of the macroeconomic fallout from the Coronavirus and related economic policy responses against the background of an analysis of longer-term macroeconomic divergence in the Eurozone. We show that the macroeconomic impact of the Corona crisis is estimated to be more severe in Southern Eurozone countries than in Northern Eurozone countries, which further reinforces the tendency of an increasing economic polarisation. This polarisation process can be traced back to existing differences in production structures and uneven vulnerabilities of the underlying growth models. As a consequence, any policy response to the Corona crisis that does not take the deeper problems of structural polarisation into account will suffer from limited impact in the medium to long run.}
 }
 
 @article{grabnerPluralismEconomicsIts2020,
@@ -317,9 +340,7 @@
   volume = {27},
   number = {4},
   pages = {311--329},
-  doi = {10.1080/1350178x.2020.1824076},
-  keywords = {1) Methodology,1) Philosophy of Economics,1) Pluralism,4) Sociology of Economics},
-  file = {/Users/graebnerc/Zotero/storage/LEKS4Z28/Gräbner and Strunk - 2020 - Pluralism in economics its critiques and their le.pdf}
+  doi = {10.1080/1350178x.2020.1824076}
 }
 
 @book{grabnerPolicyImplicationsRecent2016,
@@ -353,7 +374,7 @@
   pages = {1467--1495},
   doi = {10.1007/s00191-019-00639-6},
   abstract = {This paper analyzes the dynamics of structural polarization and macroeconomic divergence in the context of European integration, where the latter is primarily understood as an increase in economic...},
-  file = {/Users/graebnerc/Zotero/storage/MQSTNLKW/Gräbner et al. - 2020 - Structural change in times of increasing openness.pdf}
+  note = {This paper analyzes the dynamics of structural polarization and macroeconomic divergence in the context of European integration, where the latter is primarily understood as an increase in economic...}
 }
 
 @article{grabnerTrustControlInformal2018,
@@ -376,8 +397,7 @@
   pages = {1--26},
   issn = {0927-7099},
   doi = {10.1007/s10614-020-09994-0},
-  abstract = {We study the functioning of informal value transfer systems through the example of Hawala. By complementing the institutional theory with computational experiments that use the first agent-based model of IVTS, we examine the roles of generalized trust and social control for the emergence, stability, and efficiency of Hawala. We show that both trust and control are necessary, but not sufficient to guarantee its functioning, and that their relationship is time-dependent. The success of Hawala also depends on population size, interaction density, and forgiveness of the agents. Finally, we provide a theoretically grounded operationalization of generalized trust and social control that is applicable to informal exchange systems in general.},
-  keywords = {2) ABM,2) Institutions,2) Microeconomics,2) OIE}
+  abstract = {We study the functioning of informal value transfer systems through the example of Hawala. By complementing the institutional theory with computational experiments that use the first agent-based model of IVTS, we examine the roles of generalized trust and social control for the emergence, stability, and efficiency of Hawala. We show that both trust and control are necessary, but not sufficient to guarantee its functioning, and that their relationship is time-dependent. The success of Hawala also depends on population size, interaction density, and forgiveness of the agents. Finally, we provide a theoretically grounded operationalization of generalized trust and social control that is applicable to informal exchange systems in general.}
 }
 
 @article{grabnerUnderstandingEconomicOpenness2021,
@@ -405,6 +425,25 @@
   doi = {10.1504/ijcee.2019.100558}
 }
 
+@article{kapellerCorporatePowerGlobal2024,
+  title = {{Corporate power and global value chains: current approaches for conceptualizing the power of multinationals}},
+  shorttitle = {{Corporate power and global value chains}},
+  author = {Kapeller, Jakob and {Gr{\"a}bner-Radkowitsch}, Claudius and Hornykewycz, Anna},
+  year = {2024},
+  month = jun,
+  journal = {Review of Evolutionary Political Economy},
+  issn = {2662-6136, 2662-6144},
+  doi = {10.1007/s43253-024-00121-5},
+  urldate = {2024-06-20},
+  abstract = {Abstract             The influential position of multinational corporations in the global economy of the twenty-first century is a particularly controversial and timely subject. This paper aims to improve our understanding of this phenomenon by focusing on one particular aspect of it: corporate power. To this end, it first puts forth a number of conceptual clarifications that help to distinguish different kinds of power and the distinct analytical levels at which power is executed. It then focuses on corporate power and studies it against the backdrop of the development of global value chains. The aim of this analysis is twofold: firstly, to review the variety of analytical tools and ontological perspectives that coin current research on corporate power, and secondly, to discuss the causes and practical consequences of asymmetrical power constellations among corporations and between corporations and other actors. This discussion is meant to facilitate a better alignment of applied research on corporate power with pluralist approaches towards rethinking economics.},
+  langid = {Englisch},
+  note = {Dokumententyp: Alternativen?
+\par
+Erscheinungsform: Alternativen?
+\par
+Peer-reviewed: ja}
+}
+
 @article{kapellerEconomicPolarisationEurope2019,
   title = {Economic {{Polarisation}} in {{Europe}}: {{Causes}} and {{Policy Options}}},
   author = {Kapeller, Jakob and Gr{\"a}bner, Claudius and Heimberger, Philipp},
@@ -412,8 +451,7 @@
   month = jan,
   journal = {wiiw Research Report},
   volume = {440},
-  url = {https://wiiw.ac.at/economic-polarisation-in-europe-causes-and-options-for-action-dlp-5022.pdf},
-  file = {/Users/graebnerc/Zotero/storage/38KELSQ5/Kapeller et al. - 2019 - Economic Polarisation in Europe Causes and Policy.pdf}
+  url = {https://wiiw.ac.at/economic-polarisation-in-europe-causes-and-options-for-action-dlp-5022.pdf}
 }
 
 @incollection{kapellerKonzernmachtGlobalenGuterketten2021,
